k8s/worker-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: andrewdiedrich/multi-worker
        resources:
          limits:
            memory: "128Mi"
            cpu: "700m"
# no port because there's no incoming requests from other pods
